// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`hookScript should match snapshot (OS X/Linux) 1`] = `
"#!/bin/sh
# husky
# v1.1.4 darwin

scriptPath=\\"node_modules/husky/run.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

debug() {
  [ \\"\${HUSKY_DEBUG}\\" = \\"true\\" ] && echo \\"husky:debug $1\\"
}

debug \\"$hookName hook started...\\"

if ! command -v node >/dev/null 2>&1; then
  echo \\"Can't find node in PATH, trying to find a node binary on your system\\"
fi

if [ -f $scriptPath ]; then
  if [ -f ~/.huskyrc ];
    debug \\"source ~/.huskyrc\\"
    source ~/.huskyrc
  fi
  node_modules/run-node/run-node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;

exports[`hookScript should match snapshot (Windows) 1`] = `
"#!/bin/sh
# husky
# v1.1.4 win32

scriptPath=\\"node_modules/husky/run.js\\"
hookName=\`basename \\"$0\\"\`
gitParams=\\"$*\\"

debug() {
  [ \\"\${HUSKY_DEBUG}\\" = \\"true\\" ] && echo \\"husky:debug $1\\"
}

debug \\"$hookName hook started...\\"

if [ -f $scriptPath ]; then
  if [ -f ~/.huskyrc ];
    debug \\"source ~/.huskyrc\\"
    source ~/.huskyrc
  fi
  node $scriptPath $hookName \\"$gitParams\\"
else
  echo \\"Can't find Husky, skipping $hookName hook\\"
  echo \\"You can reinstall it using 'npm install husky --save-dev' or delete this hook\\"
fi
"
`;
